<resources>
    <string name="app_name">新塔电快骑</string>
    <string name="main_bottom_rescue">当前的位置将做为救援点…></string>
    <string name="main_rescue">救援</string>
    <string name="rescue_tyre">轮胎问题</string>
    <string name="rescue_car">车辆问题</string>
    <string name="rescue_battery">电池问题</string>
    <string name="main_repair">维修</string>
    <string name="main_get">提车</string>
    <string name="setting_dark_mode">夜间模式</string>
    <string name="verification_code_login">验证码登录</string>
    <string name="account_code_login">账号登录</string>
    <string name="login_account_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register_now"><u>立即注册</u></string>
    <string name="forget_password"><u>忘记密码?</u></string>
    <string name="client">客户端</string>
    <string name="staff">员工端</string>
    <string name="stationmaster">站长端</string>
    <string name="repair">维修端</string>
    <string name="quick_login">快捷登录</string>
    <string name="login_for_tel">用手机号码登录</string>
    <string name="login_tel_hint">请输入电话号码</string>
    <string name="confirm_tel">确认手机</string>
    <string name="input_receiver_tel">输入你接收到的验证码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="right">></string>
    <string name="change_head_image">修改头像</string>
    <string name="grade">等级</string>
    <string name="name">姓名</string>
    <string name="change_tel">修改手机号</string>
    <string name="my_money">我的骑行币</string>
    <string name="change_pass">修改密码</string>
    <string name="complete_detail">完善资料</string>
    <string name="change_friend">更换邀请人</string>
    <string name="file_provider_authorities">com.example.towerdriver.provider</string>
    <string name="star">*</string>
    <string name="register_tel">请输入手机号</string>
    <string name="register_tel_content">联系人</string>
    <string name="register_tel_content_tel">联系电话</string>
    <string name="register_verification_code">验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_login_pass">登录密码</string>
    <string name="register_input_pass">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="have_account">已有账号?</string>
    <string name="go_to_login">去登录</string>
    <string name="forget_tel">手机号</string>
    <string name="forget_repeat_new_pass">请输入新密码</string>

    <string name="check_interests">查看权益</string>
    <string name="my_invite_code">我的邀请码</string>
    <string name="my_driver_coin">我的骑行币</string>
    <string name="my_coupon">优惠券</string>
    <string name="my_collection">收藏</string>
    <string name="setting_notice">通知消息</string>
    <string name="setting_security">安全消息</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_treaty">使用协议</string>
    <string name="setting_connect">联系我们</string>
    <string name="account_manager">账号管理</string>
    <string name="account_cancellation">账号注销</string>
    <string name="setting_quit">退出登录</string>
    <string name="login_zfb">支付宝</string>
    <string name="login_wx">微信</string>
    <string name="request_cancellation">申请注销</string>

    <string name="click_my_id_card">点击扫描本人身份证正反面</string>
    <string name="reminder">温馨提示:</string>
    <string name="real_auth_content">光线充足环境下，将身份证置于深色背景或手持身份证扫描识 别成功率更高。</string>
    <string name="commit">提交</string>
    <string name="please_check_info">请核实身份证信息内容,保证信息准确无误</string>
    <string name="address">地址</string>
    <string name="id_code">身份证号</string>
    <string name="effective_date">有效日期</string>
    <string name="collect_face_success">人脸采集成功</string>
    <string name="share_code">分享你的二维码</string>
    <string name="download_code">下载二维码</string>
    <string name="invite_friends">邀请人列表</string>
    <string name="medal_bronze">铜牌会员</string>
    <string name="skip">跳过</string>
    <string name="setting">设置</string>
    <string name="person_center">个人中心</string>

    <string name="old_pass">旧密码</string>
    <string name="new_pass">新密码</string>
    <string name="repeat_pass">确认密码</string>

    <string name="old_pass_hint">请输入旧密码</string>
    <string name="new_pass_hint">请输入新密码</string>
    <string name="repeat_pass_hint">重复请输入新密码</string>
    <string name="release">发布</string>
    <string name="editor">编辑</string>
    <string name="driver_release">小哥发布</string>
    <string name="driver_release_edit_name">请编辑姓名</string>
    <string name="driver_release_edit_phone">请编辑电话</string>
    <string name="driver_release_edit_title">请编辑标题</string>
    <string name="driver_release_edit_content">请编辑内容</string>
    <string name="delete">删除</string>
    <string name="driver_mylist">我的列表</string>
    <string name="driver_alllist">全部列表</string>
    <string name="publish_list">切换列表</string>
    <string name="my_point">我的积分</string>
    <string name="class_level">会员等级</string>
    <string name="what_is_class">什么是会员等级?</string>
    <string name="what_is_class_content">会员等级是塔电快骑根据积分值对现有用户进行的分级制度；目 前分为铜牌会员，银牌会员，金牌会员，钻石会员4个等级，不同等级享有不?</string>
    <string name="how_is_class">会员如何实现分级，不同会员有什么权益?</string>
    <string name="how_is_class_content">会员等级与用户的积分值直接相关。\n不同会员的等级如下图所示：</string>
    <string name="range_of_integral">积分值范围</string>
    <string name="corresponding_level">对应等级</string>
    <string name="membership_rights">会员权益</string>
    <string name="tourist">游客</string>
    <string name="invite_friend">邀请好友</string>
    <string name="forget_passwordd">忘记密码</string>
    <string name="meal_list">套餐列表</string>
    <string name="person_collection">人脸采集</string>
    <string name="start_person_collection">开始人脸采集</string>
    <string name="parpare_person_collection">准备开始人脸采集</string>
    <string name="person_collectioning">开始人脸采集后,请根据具体要求完成相应动作</string>
    <string name="commit_notice">提交信息</string>
    <string name="nothing">空空如也</string>
    <string name="good_detail">商品详情</string>
    <string name="menu_detail">套餐详情</string>
    <string name="menu_name">套餐名称</string>
    <string name="menu_shuoming">套餐说明</string>
    <string name="deposit">押金</string>
    <string name="Rent_month">租金/月</string>
    <string name="Rent_day">租金/天</string>
    <string name="late_fee">  滞纳金    </string>
    <string name="Buy_now">立即购买</string>
    <string name="notice_more">更多信息</string>
    <string name="mentouzhao">门头照</string>
    <string name="around">周边街景图</string>
    <string name="shifukuan">实付款 </string>
    <string name="buy_day">购买天数</string>
    <string name="pay_style">支付方式</string>
    <string name="pay_now">立即支付</string>
    <string name="pay_wx">微信支付</string>
    <string name="shifukuan_">实付款:</string>
    <string name="notice_list">消息列表</string>
    <string name="order_list">订单列表</string>
    <string name="invite_list">邀请人列表</string>
    <string name="invite_per">您当前的邀请数量(个)</string>
    <string name="check_old_phone">验证手机号</string>
    <string name="input_get_code">请输入验证码</string>
    <string name="change_phone">更换手机号</string>
    <string name="commission">我的骑行币</string>
    <string name="tixian_money">提现金额</string>
    <string name="commission_per">我的骑行币</string>
    <string name="permission_rescue">申请救援</string>
    <string name="tixian">提现</string>
    <string name="input_get_phone">请输入手机号</string>
    <string name="input_tixian_money">请输入提现金额</string>
    <string name="solution">情况说明</string>
    <string name="start_rescue">发起救援</string>
    <string name="commit_tixian">发起提现</string>
    <string name="login_status">我已阅读并同意</string>
    <string name="privacy_agreement"><i>隐私协议</i></string>
    <string name="user_agreement">用户协议</string>
    <string name="order_detial">订单详情</string>
    <string name="details">详细信息</string>
    <string name="rescue_list">救援列表</string>
    <string name="rent_car">用户提车</string>
    <string name="rent_cars">车架号</string>
    <string name="rent_carss">电池编号</string>
    <string name="station_order">订单</string>
    <string name="station_rescue">救援</string>
    <string name="mine">我的</string>
    <string name="person_notice">个人信息</string>
    <string name="person_command">推荐信息</string>
    <string name="daka">打卡</string>
    <string name="rescue_detail">救援详情</string>
    <string name="finish_rescue">完成救援</string>


    <string name="repair_order">维修</string>
    <string name="repair_warehouse">仓库</string>
    <string name="order_add">添加订单</string>
    <string name="check_car">检查车电</string>
    <string name="approval">发起</string>
    <string name="myapproval">处理</string>
    <string name="approval_list">发起审批</string>
    <string name="deal_approval_list">处理审批</string>
    <string name="new_approval">新建审批</string>
    <string name="approval_detail">审批详情</string>
    <string name="person_list">审批人列表</string>
</resources>