<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/main_light_color">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="@dimen/dp_44"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:src="@mipmap/log_white_back" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/WhiteTitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_old_phone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/rect_line_bg">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_get_code"
            android:inputType="number"
            android:maxEms="14"
            android:maxLines="1"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/dp_14" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_send_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_weight="2.5"
            android:background="@null"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/register_get_code"
            android:textColor="@color/main_light_color"
            android:textSize="@dimen/dp_12" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/login_bottom_bg"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_16" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/text_black_color"
        android:textSize="@dimen/dp_16" />
</LinearLayout>