<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/main_light_color">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="@dimen/dp_44"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:src="@mipmap/log_white_back" />
        </LinearLayout>

        <TextView
            style="@style/WhiteTitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pass" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_30"
                android:foreground="?android:attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    style="@style/ElseTitleTextViewStyle"
                    android:layout_centerVertical="true"
                    android:text="@string/old_pass"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_tel"
                    style="@style/RegisterTextViewStyle"
                    android:layout_marginStart="@dimen/dp_100"
                    android:hint="@string/old_pass_hint"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColorHint="@color/text_login_hint"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@color/line_black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_30"
                android:foreground="?android:attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView4"
                    style="@style/ElseTitleTextViewStyle"
                    android:layout_centerVertical="true"
                    android:text="@string/new_pass"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_pass"
                    style="@style/RegisterTextViewStyle"
                    android:layout_marginStart="@dimen/dp_100"
                    android:hint="@string/new_pass_hint"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColorHint="@color/text_login_hint"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/appCompatTextView4"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@color/line_black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_30"
                android:foreground="?android:attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView5"
                    style="@style/ElseTitleTextViewStyle"
                    android:layout_centerVertical="true"
                    android:text="@string/repeat_pass"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_pass_again"
                    style="@style/RegisterTextViewStyle"
                    android:layout_marginStart="@dimen/dp_100"
                    android:hint="@string/register_input_pass"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColorHint="@color/text_login_hint"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/appCompatTextView5"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@color/line_black" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_load"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_70"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/login_bottom_bg"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</LinearLayout>