<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/main_light_color">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="@dimen/dp_44"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:src="@mipmap/log_white_back" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/WhiteTitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_phone" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@null"
            android:hint="@string/login_tel_hint"
            android:inputType="phone"
            android:maxEms="20"
            android:maxLines="1"
            android:textSize="@dimen/dp_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_line_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@color/line_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@null"
            android:hint="@string/input_get_code"
            android:inputType="number"
            android:maxEms="20"
            android:maxLines="1"
            android:textSize="@dimen/dp_13"
            app:layout_constraintEnd_toStartOf="@+id/bt_send_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line_top"
            tools:ignore="TextFields" />

        <View
            android:id="@+id/view_line_buttom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@color/line_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_code" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_send_message"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@null"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/register_get_code"
            android:textColor="@color/main_light_color"
            android:textSize="@dimen/dp_12"
            app:layout_constraintBottom_toBottomOf="@+id/et_code"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_commit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/login_bottom_bg"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line_buttom" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>